tests/paczka1/fuzzy1/79575487.err
Error in line 4: 6h5pvy S849 5,7
Error in line 11: MI2 S849 89,6
Error in line 18: ddp3Jk S849 56,7
Error in line 23: V2KrCGTX9ps A338 15,0
